--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE>
+﻿< !DOCTYPE html>
 <html>
     <head>
-        <title> Проба</title>
+        <title> Проба!!!</title>
     </head>
     <body>
         <center><h1>Пробный запуск</h1>
