--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     <body>
         <center><h1>Пробный запуск</h1>
         </center>
+        <form method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth"> 
+
+<div class="label">Логин:</div>
+<input type="text" name="login" value="" tabindex="1"/>
+<div class="label">Пароль:</div>
+<input type="hidden" name="retpath" value="http://mail.yandex.ru/for/npoit.space">
+<input type="password" name="passwd" value="" maxlength="100" tabindex="2"/> <br>
+
+<label for="a"><input type="checkbox" name="twoweeks" id="a" value=«no» tabindex="4"/>чужой компьютер</label> (<a href="https://yandex.ru/support/passport/#foreign-pc">что это</a>)
+
+<input type="submit" name="In" value="Войти" tabindex="5"/> </form>
     </body>
 </html>
