--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
     <head>
         <title> Проба!!!</title>
+        <script type="text/javascript" src="https://yastatic.net/jquery/3.1.0/jquery.js"></script>
+        <script type="text/javascript" src="https://yastatic.net/jquery-ui/1.11.2/jquery-ui.min.js"></script>
+
     </head>
     <body>
         <center><h1>Пробный запуск</h1>
         </center>
-        <form method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth"> 
+        <script type="text/javascript">
+        $("#draggable").draggable(); 
+        </script>
+        <form id="f" method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth"> 
 
 <div class="label">Логин:</div>
 <input type="text" name="login" value="" tabindex="1"/>
