--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <center><h1>Пробный запуск</h1>
         </center>
         <script type="text/javascript">
-        $("#draggable").draggable(); 
+        $("#f").draggable(); 
         </script>
         <form id="f" method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth"> 
 
