--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <title> Проба!!!</title>
-        <script type="text/javascript" src="https://yastatic.net/jquery/3.1.0/jquery.js"></script>
-        <script type="text/javascript" src="https://yastatic.net/jquery-ui/1.11.2/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="jquery-ui.js"></script>
 
     </head>
     <body>
         <center><h1>Пробный запуск</h1>
         </center>
-        <script type="text/javascript">
+        <script type="javascript">
         $("#f").draggable(); 
+        
         </script>
         <form id="f" method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth"> 
 
