--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
     </head>
     <body>
-        <center><h1>Пробный запуск</h1>
-        </center>
+      <div class="label" id="d">  <center><h1>Пробный запуск</h1>
+      </center></div>
         <script type="javascript">
-        $("#f").draggable(); 
-        
+        $("#d").draggable();
+        $("#f").draggable();
+      
         </script>
-        <form id="f" method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth"> 
+        <form id="f" method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth">
 
 <div class="label">Логин:</div>
 <input type="text" name="login" value="" tabindex="1"/>
