--- a/index.html
+++ b/index.html
@@ -2,20 +2,66 @@
 <html>
     <head>
         <title> Проба!!!</title>
-        <script type="text/javascript" src="jquery.js"></script>
-        <script type="text/javascript" src="jquery-ui.js"></script>
+        <link type="text/css" href="jquery-ui.css" rel="stylesheet" />
+       <style>
+	body{
+		font-family: "Trebuchet MS", sans-serif;
+		margin: 50px;
+	}
+	.demoHeaders {
+		margin-top: 2em;
+	}
+	#dialog-link {
+		padding: .4em 1em .4em 20px;
+		text-decoration: none;
+		position: relative;
+	}
+	#dialog-link span.ui-icon {
+		margin: 0 5px 0 0;
+		position: absolute;
+		left: .2em;
+		top: 50%;
+		margin-top: -8px;
+	}
+	#icons {
+		margin: 0;
+		padding: 0;
+	}
+	#icons li {
+		margin: 2px;
+		position: relative;
+		padding: 4px 0;
+		cursor: pointer;
+		float: left;
+		list-style: none;
+	}
+	#icons span.ui-icon {
+		float: left;
+		margin: 0 4px;
+	}
+	.fakewindowcontain .ui-widget-overlay {
+		position: absolute;
+	}
+	select {
+		width: 200px;
+	}
+	</style>
 
     </head>
     <body>
+        
       <div class="label" id="d">  <center><h1>Пробный запуск</h1>
       </center></div>
-        <script type="javascript">
-        $("#d").draggable();
-        $("#f").draggable();      
-        </script>
 
-        <form id="f" method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth">
+       <!-- <h2 class="demoHeaders">Dialog</h2> -->
+       <p>
+           <button id="dialog-link" class="ui-button ui-corner-all ui-widget">
+		<span class="ui-icon ui-icon-newwin"></span>Вход в почту
+	</button>
+       </p>
 
+<div class="dialog" id="dialog" title="Login"><p>
+    <form  method="post" action="https://passport.yandex.ru/for/npoit.space?mode=auth">
 <div class="label">Логин:</div>
 <input type="text" name="login" value="" tabindex="1"/>
 <div class="label">Пароль:</div>
@@ -25,5 +71,31 @@
 <label for="a"><input type="checkbox" name="twoweeks" id="a" value=«no» tabindex="4"/>чужой компьютер</label> (<a href="https://yandex.ru/support/passport/#foreign-pc">что это</a>)
 
 <input type="submit" name="In" value="Войти" tabindex="5"/> </form>
+    </p></div>
+ 
+ <script type="text/javascript" src="jquery.js"></script>
+ <script type="text/javascript" src="jquery-ui.js"></script>
+ <script>
+        $("#d").draggable();        
+       $( "#dialog" ).dialog({
+	autoOpen: false,
+	width: 400,
+	buttons: [
+		{
+			text: "Cancel",
+			click: function() {
+				$( this ).dialog( "close" );
+			}
+		}
+	]
+});
+
+// Link to open the dialog
+$( "#dialog-link" ).click(function( event ) {
+	$( "#dialog" ).dialog( "open" );
+	event.preventDefault();
+});
+          
+        </script>
     </body>
 </html>
