--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <title> Проба!!!</title>
+        <title> Почта сотрудников НПО ИТ</title>
         <link type="text/css" href="jquery-ui.css" rel="stylesheet" />
 		<style>
 	body{
@@ -51,7 +51,7 @@
     <body>
        	
 			
-      <div class="label" id="d">  <center><h1>Пробный запуск</h1>
+      <div class="label" id="d">  <center><h1>Почта для сотрудников АО "НПО ИТ"</h1>
       </center></div>
 			
        <!-- <h2 class="demoHeaders">Dialog</h2> -->
